# coyote-audio

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
src/: config.rs  lib.rs  main.rs
src/audio/: analysis.rs  mapper.rs  mod.rs  pipewire.rs
src/ble/: connection.rs  mod.rs  protocol.rs  protocol_v3.rs  scanner.rs
src/tui/: app.rs  mod.rs  ui.rs
