[package]
name = "coyote-audio"
version = "0.1.0"
edition = "2021"
description = "Coyote V2 BLE protocol implementation"

[dependencies]
btleplug = "0.11"
tokio = { version = "1", features = ["full"] }
uuid = "1.0"
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"
pipewire = "0.9.2"
libspa = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
directories = "5.0"
rustfft = "6.2"
ratatui = "0.28"
crossterm = "0.28"

[dev-dependencies]
tokio-test = "0.4"
